--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -40,3 +40,34 @@ nav a {
 nav a:hover {
   color: #1ABC9C;
 }
+
+/* ====== MAIN ====== */
+
+
+/* ====== FOOTER ====== */
+footer {
+  background-color: #003366;
+  color: #fff;
+  text-align: center;
+  padding: 2%;
+  margin-top: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+footer a {
+  color: #1ABC9C;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+
+footer img {
+  width: 100px;
+  height: auto;
+}
